--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+html, body {
+  height: 100%;
+  min-height: 100vh;
+  background: #101010;
+  overflow: hidden;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
